--- a/Minesweeper/pom.xml
+++ b/Minesweeper/pom.xml
@@ -30,6 +30,14 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>fi.lyma.logic.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>fi.lyma.logic.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
